Solución al Reto 3

--- a/Reto 3/ObjectDumper/ObjectDumperTests/ObjectDumperTests.csproj
+++ b/Reto 3/ObjectDumper/ObjectDumperTests/ObjectDumperTests.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -56,6 +57,12 @@
     <Compile Include="Ufo.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ObjectDumper\ObjectDumper.csproj">
+      <Project>{ca88a828-dc6f-4133-a655-3906b4475db7}</Project>
+      <Name>ObjectDumper</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
